--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -2,6 +2,9 @@
 @import "../../vendor/filament/forms/dist/module.esm.css";
 @import "../../node_modules/swiper/swiper-bundle.min.css";
 @import "../../node_modules/@fancyapps/ui/dist/fancybox.css";
+@import "../../node_modules/leaflet/dist/leaflet.css";
+@import "../../node_modules/leaflet.markercluster/dist/MarkerCluster.css";
+@import "../../node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css";
 
 @tailwind base;
 @tailwind components;
